--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>WEB</h2>
+  <h2>WEB 김도엽 졸라 멋있어</h2>
   <p>1989년 3월 12일에 제안되고 1990년 12월 20일에 발표되고 보급되기 시작한 월드 와이드 웹(World Wide Web, WWW, W3)은 인터넷에 연결된 컴퓨터를 이용해 사람들과 정보를 공유할 수 있는 거미줄(Web)처럼 얼기설기 엮인 공간을 뜻하는 용어다. HTTP 프로토콜을 기반으로 HTML로 작성된 하이퍼텍스트 페이지를 '웹 브라우저'라는 특정한 프로그램으로 읽을 수 있게 하도록 구성되어 있다. 'WWW', 'W3', 또는 간단하게 '웹(Web)'이라고도 한다. 첫 번째 웹 브라우저는 프로토콜과 같이 발표된, 띄어쓰기가 없는 WorldWideWeb이다. '인터넷'의 동의어로 여기는 사람들이 많지만, 인터넷은 TCP/IP 프로토콜로 구현된 통신망이고, 월드 와이드 웹은 이 인터넷을 기반으로 대량의 이미지와 문자를 전송하는 프로토콜이다.  
   </p>
 </body>
