그랑프리 수정~

--- a/1.html
+++ b/1.html
@@ -1,22 +1,32 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>株式会社　一福1 - Grand Prix</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">株式会社　一福</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Grand Prix</a></li>
+    <li><a href="2.html">in The Bar</a></li>
+    <li><a href="3.html">GolfCompetition</a></li>
   </ol>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 speicification">Hypertext Markup Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into mulrimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+  <h2>Grand Prix</h2>
+  <p>日頃は格別のご愛頼を陽り、誠にありがとうございます。
+  このたび<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 speicification">[グランプリ]</a>はリニューアルオープンすることになりました。
+  これも皆様の変わらぬお引き立てのおかげと、心より感謝いたしております。
+  皆様のご来店を心よりお待ち申し上げております。
   <img src="coding.jpg" width="100%">
-  </p><p style="margin-top: 45px;">HTML elements are the
-  building blocks of HTML pages. With HTML constructs,
-  images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documets by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle bracket.
+  </p>
+  <p style="margin-top: 45px;"><center>大ママ　洪 廷敏<br>
+  ママ　スミ<br>
+  ママ　ミナ<br>
+  ママ　ミヒ<br>
+  ママ　ナルミ<br>
+  ママ　榊<br>
+  常務　金 祥勳<br>
+  部長　金 樂泫<br>
+  </center>
   </p>
 </body>
 </html>
