--- a/ex1.html
+++ b/ex1.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>JavaScript</h1>
+    <h1>GolfCompetition</h1>
     <script>
       document.write(1+1);
     </script>
