--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - WEB</title>
+  <title>株式会社　一福1 - 株式会社　一福</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">株式会社　一福</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Grand Prix</a></li>
+    <li><a href="2.html">in The Bar</a></li>
+    <li><a href="3.html">GolfCompetition</a></li>
   </ol>
-  <h2>WEB</h2>
-  <p>김도엽 졸라 멋있어  
+  <h2>株式会社　一福</h2>
+  <p>株式会社　恩成
   </p>
 </body>
 </html>
