--- a/1.html
+++ b/1.html
@@ -3,9 +3,13 @@
 <head>
   <title>株式会社　一福1 - Grand Prix</title>
   <meta charset="utf-8">
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">株式会社　一福</a></h1>
+  <input id="night_day" type="button" value="night" onclick="
+    nightDayHandler(this);
+  ">
   <ol>
     <li><a href="1.html">Grand Prix</a></li>
     <li><a href="2.html">in The Bar</a></li>
