--- a/2.html
+++ b/2.html
@@ -3,9 +3,13 @@
 <head>
   <title>株式会社　一福1 - in The Bar</title>
   <meta charset="utf-8">
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">株式会社　一福</a></h1>
+  <input id="night_day" type="button" value="night" onclick="
+    nightDayHandler(this);
+  ">
   <ol>
     <li><a href="1.html">Grand Prix</a></li>
     <li><a href="2.html">in The Bar</a></li>
@@ -13,9 +17,99 @@
   </ol>
   <h2>in The Bar</h2>
   <p>
-    <img src="inthebartv.jpg" width="100%">종속형 시트 또는 캐스케이딩 스타일 시트(영어: Cascading Style Sheet)는 마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어(영어: Style sheet language 스타일 시트 랭귀지[*])로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다. 기본 파일명[2]은 style.css이다.
-    마크업 언어(ex: HTML)가 웹사이트의 몸체를 담당한다면 CSS는 옷과 액세서리처럼 꾸미는 역할을 담당한다고 할 수 있다. 즉, HTML 구조는 그대로 두고 CSS 파일만 변경해도 전혀 다른 웹사이트처럼 꾸밀 수 있다.
-    현재 개발 중인 CSS3의 경우 그림자 효과, 그라데이션, 변형 등 그래픽 편집 프로그램으로 제작한 이미지를 대체할 수 있는 기능이 추가되었다. 또한 다양한 애니메이션 기능이 추가되어 어도비 플래시를 어느 정도 대체하고 있다.
+    <img src="inthebartv.jpg" width="100%"><center>* * *<br>
+    | 仕事内容<br>
+    ☆未経験のコ大歓迎～☆<br>
+    すべての女性を大切にします♪<br>
+    優しい常連さまに大切にされて<br>
+    居心地は文句なしに満点なので<br>
+    楽しんでお仕事してください！☆<br>
+
+    あなたのナイトワークライフを<br>
+    ”楽しく” ”安全に” ”続けられる”ように、<br>
+    心から応援し、サポートします！！<br>
+
+    アピールポイント:<br>
+
+    ◉　外国人のコも大歓迎！　◉<br>
+    気軽に働ける「K'S GIRLS BAR」！<br>
+    ＼　未経験者さんでも大募集！ ／<br>
+
+    ＋☆　in The Bar（イン ザ バー）　☆＋<br>
+
+    o*――ﾟ+.――ﾟ+.――ﾟ+.――ﾟ+.――*o<br>
+
+    ◎Open１年でピッカピカ！<br>
+    ◎安心のカウンターオンリー！<br>
+    ◎お酒が飲めなくても全然OK！<br>
+
+    o*――ﾟ+.――ﾟ+.――ﾟ+.――ﾟ+.――*o<br>
+
+    求める人材:<br>
+
+    * * *<br>
+    | 給与<br>
+    時給 2,000円スタート<br>
+    ▼バック・昇給あります！<br>
+
+    * * *<br>
+    | 服装<br>
+    ちょっとオシャレな普段着、<br>
+    ワンピースやスカートスタイルでOK☆<br>
+
+    勤務時間・曜日:<br>
+
+    20:00～3:00で応相談<br>
+    ◎どんな働き方もご相談下さい！<br>
+    ▼短期希望、長期休暇、週１日、<br>
+    　週末だけ、1日３ｈだけ..など<br>
+    　もちろんOPEN→LASTも大歓迎♪<br>
+    ▼あなたの都合に合わせて<br>
+    　ムリなくお仕事しましょう！！<br>
+
+    休暇・休日:<br>
+
+    定休日(日曜日)<br>
+
+    勤務地:<br>
+
+    東京都新宿区歌舞伎町2-19-7　新田中ビル1F<br>
+
+    アクセス:<br>
+
+    各線「東新宿」駅、A1出口から徒歩3分<br>
+    西武新宿線「西武新宿」駅から徒歩3分<br>
+    各線「新宿」駅から徒歩9分<br>
+
+    待遇・福利厚生:<br>
+
+    バックあり<br>
+    随時昇給あり<br>
+    日払いOK<br>
+    飲めなくてもOK<br>
+    即日勤務OK<br>
+    短期の勤務OK<br>
+    WワークOK<br>
+    30歳以上も活躍中<br>
+    服装自由(GパンはNG)<br>
+    未経験者歓迎<br>
+    経験者優遇<br>
+    研修 & ノルマなし<br>
+    駅チカ<br>
+
+    その他:<br>
+
+    *・:..｡o￠o｡..:・*・:..｡o￠o｡..:・*・:..｡<br>
+
+    まずは確認感覚でのお問い合わせ＆<br>
+    面接も大歓迎です(^^)/<br>
+    ご連絡をお待ちしています！<br>
+
+    *・:..｡o￠o｡..:・*・:..｡o￠o｡..:・*・:..｡<br>
+
+    雇用形態: アルバイト･パート<br>
+
+    給与: 2,000円 (時給) 以上<br></center>
   </p>
 </body>
 </html>
